made simple recording application in electron

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <title>Hello World!</title>
     <link rel="stylesheet" href="index.css" />
+    <script defer src = "record.js"></script>
   </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+  <body class = "content">
+    <h1><b>iRecord</b></h1>
+
+    <video></video>
+
+    <button id = "start" class = "button is-primary"></button>
+    <button id = "stop" class = "button is-warning"></button>
+
+
+    <hr />
+
+    <button id="videoSelect" class = "button is-text">
+      Choose Your Video Source
+    </button>
   </body>
 </html>
